--- a/site/public/css/style.css
+++ b/site/public/css/style.css
@@ -7,6 +7,7 @@ header {
     display: flex;
     align-items: center;
     justify-content: space-around;
+    flex-direction: row;
     width: 100%;
     height: 8vh;
     position: sticky;
