--- a/site/public/css/dash.css
+++ b/site/public/css/dash.css
@@ -1,3 +1,10 @@
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    font-family: 'Poppins', sans-serif;
+}
+
 body{
     background-image: url(../assets/fundopretobranco.webp);
     background-size:contain;
@@ -18,10 +25,22 @@ canvas {
 .telaDash{
     display: flex;
     flex-direction: column;
+    align-items: center;
     justify-content: space-around;
     align-items: center;
     width: 100%;
     height: 100vh;
+}
+
+.TituloDash{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 20%;
+    height: 5%;
+    border: 2px solid black;
+    background-color: white;
+    font-weight: bold
 }
 .graficosQuiz{
     display: flex;
