--- a/site/public/css/style.css
+++ b/site/public/css/style.css
@@ -67,10 +67,14 @@ header a:hover {
     background-color: rgba(255, 255, 255, 0.9);
     border: 2px solid black;
     z-index: 1001;
-    width: 100%
+    width: 150px
 }
 
 .menu-options a {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
     display: block;
     padding: 5px 10px;
     text-decoration: none;
