--- a/site/public/css/stylehome2.css
+++ b/site/public/css/stylehome2.css
@@ -4,8 +4,8 @@
     justify-content: space-between;
     width: 100%;
     height: 100vh;
-    background-color: #FFC74F;
-    /* position: fixed; */
+    background-image: url(../assets/fundoIndex.jpg);
+    background-size: contain;
 }
 
 #esquerda {
