--- a/site/public/css/login2.css
+++ b/site/public/css/login2.css
@@ -22,6 +22,9 @@ body{
   }
 
   .containerLoginDireito{
+    display: flex;
+    align-items: center;
+    justify-content: center;
     height: 100%;
     width: 50%;
     background-color: white;
@@ -64,4 +67,18 @@ body{
     justify-content: center;
     width: 100%;
     height: 25%;
+  }
+  .card_erro {
+    display: none;
+    background-color: #fff;
+    color: black;
+    width: 230px;
+    position: fixed;
+    border: 2px solid black;
+    margin-right: 10%;
+  }
+  
+  .card_erro #mensagem_erro{
+    font-weight: 500;
+    font-size: 20px;
   }
